# Open-Coder-Agent

./: .agentignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  agent-run  docker-compose.yml  pyproject.toml
.github/: dependabot.yaml
agent/: main.py
agent/src/: README.md  main.py
agent/src/cli/: cli.py
agent/src/config/: config.py  logger.py  prompt.md
agent/src/graph/: nodes.py  state.py  state_graph.py  workflow.py
agent/src/middlewares/: tool_error_handler.py
agent/src/model/: model.py
agent/src/tools/: git.py  inspector.py  registry.py  utilities.py
agent/src/tools/bash/: executor.py
agent/src/tools/common/: git.py
agent/src/tools/git/: inspector.py
agent/src/tools/javascript/: inspector.py
agent/src/tools/python/: coder.py  inspector.py
agent/tools/: git.py
api/: Dockerfile  README.md
api/src/: main.py
api/src/controller/: routes.py
api/src/dto/: requests.py
api/src/model/: card_moved_event.py
