[project]
name = "Open-Coder-Agent"
version = "0.1.0"
description = "Lightweight offline coding agent powered by Ollama"
requires-python = "==3.12.*"
# Common dependencies to agent
dependencies = [
    "isort>=8.0.1",
    "loguru>=0.7.3",
    "rich>=14.3.3",
]

[dependency-groups]
agent = [
    "langchain>=0.3.0",
    "langchain_ollama>=1.0.1",
    "langchain-community>=0.4.1",
    "pydantic>=2.0.0",
    "langgraph>=1.0.10",
]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
src = ["agent"]

[tool.ruff.lint]
select = ["E", "W", "F", "FAST", "RUF", "I", "SIM", "B", "ARG", "RET", "UP", "T20", "C4"]
ignore = ["B904", "B008"]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["agent"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
